--- a/sevenfit/Dockerfile
+++ b/sevenfit/Dockerfile
@@ -1,11 +1,27 @@
+# -------- BUILD STAGE --------
+FROM maven:3.9.9-eclipse-temurin-21 AS build
+
+WORKDIR /app
+
+COPY pom.xml .
+COPY mvnw .
+COPY .mvn .mvn
+RUN chmod +x mvnw
+
+RUN ./mvnw dependency:go-offline
+
+COPY src src
+
+RUN ./mvnw clean package -DskipTests
+
+
+# -------- RUN STAGE --------
 FROM eclipse-temurin:21-jdk
 
 WORKDIR /app
 
-COPY . .
-
-RUN ./mvnw clean package -DskipTests || mvn clean package -DskipTests
+COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "target/*.jar"]
+CMD ["java", "-jar", "app.jar"]
