--- a/sevenfit/src/main/resources/application.properties
+++ b/sevenfit/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 spring.application.name=sevenfit
-spring.datasource.url=jdbc:mysql://localhost:3306/fits_db?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
