--- a/sevenfit/src/main/resources/application.properties
+++ b/sevenfit/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.application.name=sevenfit
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+server.port=${PORT}
